Add schedule for July 10th

--- a/public/index.html
+++ b/public/index.html
@@ -682,9 +682,9 @@
 
               <p>
                 <b>Irina's House</b><br>
-                TBD<br>
-                Asheville, NC<br><br>
-                <!--a href='https://www.google.com/maps/dir//389+Upper+Thomas+Branch+Rd,+Marshall,+NC+28753/@35.859003,-82.7334927,17z/data=!4m13!1m4!3m3!1s0x885a2557634fe5c5:0x35280f975e6a18c2!2s389+Upper+Thomas+Branch+Rd,+Marshall,+NC+28753!3b1!4m7!1m0!1m5!1m1!1s0x885a2557634fe5c5:0x35280f975e6a18c2!2m2!1d-82.731304!2d35.859003' target='_blank'>Click for Directions to 'The Ridge'</a-->
+                119 Old Gibbs Road<br>
+                Weaverville, NC<br><br>
+                <a href='https://www.google.com/maps/place/119+Old+Gibbs+Rd,+Weaverville,+NC+28787/@35.733033,-82.587454,17z/data=!3m1!4b1!4m5!3m4!1s0x885a21b509eae77b:0x7a1f656144d0ef73!8m2!3d35.733033!4d-82.58526' target='_blank'>Click for Directions to Irina's House</a>
               </p>
 
               <div class="de-icon circle small-size inline" style="background-color:#f6700e">
@@ -694,9 +694,9 @@
   
               <p>
                 <b>Irina's House</b><br>
-                TBD<br>
-                Asheville, NC<br><br>
-                <!--a href='https://www.google.com/maps/dir//389+Upper+Thomas+Branch+Rd,+Marshall,+NC+28753/@35.859003,-82.7334927,17z/data=!4m13!1m4!3m3!1s0x885a2557634fe5c5:0x35280f975e6a18c2!2s389+Upper+Thomas+Branch+Rd,+Marshall,+NC+28753!3b1!4m7!1m0!1m5!1m1!1s0x885a2557634fe5c5:0x35280f975e6a18c2!2m2!1d-82.731304!2d35.859003' target='_blank'>Click for Directions to 'The Ridge'</a-->
+                119 Old Gibbs Road<br>
+                Weaverville, NC<br><br>
+                <a href='https://www.google.com/maps/place/119+Old+Gibbs+Rd,+Weaverville,+NC+28787/@35.733033,-82.587454,17z/data=!3m1!4b1!4m5!3m4!1s0x885a21b509eae77b:0x7a1f656144d0ef73!8m2!3d35.733033!4d-82.58526' target='_blank'>Click for Directions to Irina's House</a>
               </p>
 
               <div class="de-icon circle small-size inline" style="background-color:#f0394d">
@@ -709,10 +709,10 @@
 
               <p>
                 <b>Tim's House</b><br>
-                TBD <br>
-                Asheville, NC <br>
+                5 Moonrise Ridge<br>
+                Leicester, NC 28748<br><br>
                 
-                <!--a href='https://www.google.com/maps/dir//20+S+Spruce+St,+Asheville,+NC+28801/@35.59513,-82.5518367,17z/data=!4m13!1m4!3m3!1s0x8859f3584a97e195:0x930311f63a832a8a!2s20+S+Spruce+St,+Asheville,+NC+28801!3b1!4m7!1m0!1m5!1m1!1s0x8859f3584a97e195:0x930311f63a832a8a!2m2!1d-82.549648!2d35.59513' target='_blank'>Click for Directions to Pack's Tavern</a-->
+                <a href='https://www.google.com/maps/place/5+Moonrise+Rdg,+Leicester,+NC+28748/@35.673851,-82.7175561,15z/data=!4m5!3m4!1s0x8859883f41464b81:0x6781aac219ab1a98!8m2!3d35.673851!4d-82.708796' target='_blank'>Click for Directions to Tim's House</a>
               </p>
 
             </div>
@@ -816,6 +816,76 @@
 
           </div>
           <!-- END of ROW-3 -->
+
+
+
+
+          <!-- ROW-2 -->
+          <div class="row">
+
+            <!-- SECTION TITLE -->
+            <div class="col-md-12 text-center">
+
+              <div class="banner-text dark full animation fadeIn">
+
+                <div class="row">
+                  <div class="col-md-4">
+                    <h3>JULY 10, 2016</h3>
+                  </div>
+                  <div class="col-md-4">
+                    <div class="border-column">
+                      <h3>TEN O'CLOCK IN THE MORNING</h3>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <h3>THE DAY AFTER THE WEDDING</h3>
+                  </div>
+
+                </div>
+
+
+              </div>
+
+            </div>
+          </div>
+          <!-- END of ROW-2 -->
+
+
+          <!-- ROW-3 -->
+          <div class="row">
+            <div class="col-md-6 animation fadeIn">
+
+              <div class="de-icon circle small-size inline" style="background-color:#f0394d">
+                <i class="de-icon-food"></i>
+              </div>
+
+              <h3 class="inline">BRUNCH - 10:00AM </h3>
+              <p>We will be at Biscuit Head cafe on Haywood Road from 10:00am to 11:30am on Sunday. 
+              </p>
+
+              <p>Whoever would like to join is welcome.</p>
+
+              <p>
+                <b><a href="http://www.biscuitheads.com/" target="_blank">Biscuit Head</a></b><br>
+                733 Haywood Rd.<br>
+                Asheville, NC 28806<br><br>
+                <a href='https://www.google.com/maps/place/733+Haywood+Rd,+Asheville,+NC+28806/@35.5778913,-82.5950256,17z/data=!3m1!4b1!4m5!3m4!1s0x88598ced3846cf49:0xdf44c77ed97b66e9!8m2!3d35.5778913!4d-82.5928316' target='_blank'>Click for Directions to 'Biscuit Head'</a>
+              </p>
+
+            </div>
+
+            <div class="col-md-6 animation fadeIn">
+                <!--PHOTO-->
+                <img src="http://res.cloudinary.com/dlpep2th5/image/upload/c_fill,h_400,w_500/v1466989535/baby-breakfast-biscuits-5_eyp50y.jpg">
+            </div>
+          </div>
+          <!-- END of ROW-3 -->
+
+
+
+
+
+
 
         </div>
       </section>
