Update brunch notes.

--- a/public/index.html
+++ b/public/index.html
@@ -888,7 +888,7 @@
               <p>We will be at Biscuit Head cafe on Haywood Road from 10:00am to 11:30am on Sunday.
               </p>
 
-              <p>All who wish to join us are welcome for this casual brunch.</p>
+              <p>All who wish to join us are welcome for this casual brunch, however please be aware that the restaurant does not allow reserved seating and all tables are first come first serve.</p>
 
               <p>
                 <b>Attire</b> : Casual.
