Removed RSVP form action to prevent form spam

--- a/public/index.html
+++ b/public/index.html
@@ -2315,7 +2315,7 @@
               <!-- Show Message -->
             </div>
 
-            <form method="post" action="https://aqueous-journey-93402.herokuapp.com/rsvp" id="rsvpform">
+            <form method="post" id="rsvpform">
               <div class="col-md-6">
                 <div id="fullname" class="form-group">
                   <label for="inputname">NAME *</label>
